--- a/app/views/cocktails/_cocktail.html.erb
+++ b/app/views/cocktails/_cocktail.html.erb
@@ -1,2 +1,42 @@
 <div id="<%= dom_id cocktail %>">
+  <p>
+    <strong>Name:</strong>
+    <%= cocktail.name %>
+  </p>
+
+  <p>
+    <strong>Image:</strong>
+    <%= cocktail.image %>
+  </p>
+
+  <p>
+    <strong>Category:</strong>
+    <%= cocktail.category %>
+  </p>
+
+  <p>
+    <strong>Type:</strong>
+    <%= cocktail.type %>
+  </p>
+
+  <p>
+    <strong>Glass:</strong>
+    <%= cocktail.glass %>
+  </p>
+
+  <p>
+    <strong>Ingredients:</strong>
+    <%= cocktail.ingredients %>
+  </p>
+
+  <p>
+    <strong>Instructions:</strong>
+    <%= cocktail.instructions %>
+  </p>
+
+  <p>
+    <strong>Date modified:</strong>
+    <%= cocktail.date_modified %>
+  </p>
+
 </div>
